# thin-films

./: .firebaserc  .gitignore  README.md  gunni.txt  legacy.txt  neurips_checklist.txt  pyproject.toml  requirements.txt  thin_films.ipynb  thin_films.py
.firebase/: hosting.ZG9jcy9idWlsZC9odG1s.cache
analysis/: best_hp_var_sample_L0.19_V5.06.npz  best_hp_var_sample_L0.24_V5.06old.npz  best_hp_var_sample_L0.41_V3.03.npz  estimate_growth.py  first_h_convex_function.npz  gemini.py  generate_data.py  generate_training_data.py  my_training_data.npz  operator_learning.py  refine_with_simulator.py  simple_plots.py  test_profiles.py  thicknesses_only.npz  train_neural_operator.py  training_data.npz  working_with_the_data.py
docs/: README.md
gunnar/: livescript_curve_simul_leo.txt  star.m  tmm1d.m
notebooks/: chirp_analysis.ipynb  chirp_standalone.ipynb  chirp_standalone_leonard.ipynb  chirps.ipynb  dtw_test.ipynb  emd_analysis.ipynb  neural_operator.pickle  noisy_reflectance.npz  one_growing_layer.ipynb  overview.ipynb  superlets.ipynb  three_lasers.ipynb  time_points.npz
paper/: README.md  all_plots.py  analyze_all_validation_samples.py  analyze_measurement.py  analyze_single_example.py  baseline_setup.py  compare_neural_operators.py  data_kde_test.py  degeneracy_test.py  direct_optimization.py  gen_validation_data.py  generate_all_paper_plots.py  generate_training_data.py  generate_validation_data.py  interference_model_comparison.py  measurement_analysis.py  measurement_analysis_setup2.npz  miniplot.py  noise_robustness_test.py  noisy_tests.py  optimization.py  (+11 more)
(+913 files in other folders)
