[tool.poetry]
name = "reflax"
version = "0.0.1"
description = "TODO"
authors = ["Gunnar Ehlers", "Leonard Storcks"]
readme = "README.md"
packages = [{include = "reflax"}]

[tool.poetry.dependencies]
python = ">=3.9"
optax = ">=0.2.0"
jax = ">=0.4.0"
jaxtyping = ">=0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"