[tool.poetry]
name = "reflax"
version = "0.0.3"
description = "TODO"
authors = ["anonymous authors"]
readme = "README.md"
packages = [{include = "reflax"}]

[tool.poetry.dependencies]
python = ">=3.10"
jax = ">=0.4.0"
jaxtyping = ">=0.2.0"
torch = ">=2.0.0"
schedulefree = ">= 1.4"
tqdm = ">=4.67.0"
optuna = ">=4.0.0"
seaborn = "^0.13.2"
flax = "^0.10.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"