[tool.poetry]
name = "reflax"
version = "0.0.3"
description = "TODO"
authors = ["anonymous authors"]
readme = "README.md"
packages = [{include = "reflax"}]

[tool.poetry.dependencies]
python = ">=3.10"
jax = ">=0.4.0"
jaxtyping = ">=0.2.0"
optax = ">=0.2.0"
flax = "^0.10.6"
scikit-learn = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"